Bug 436052 - Malformed URL for bugs.kde.org at About "application" page, when using a non-English locale
Summary: Malformed URL for bugs.kde.org at About "application" page, when using a non-...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kxmlgui
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR critical
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-22 17:11 UTC by Petros
Modified: 2021-05-12 20:04 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.83
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Petros 2021-04-22 17:11:52 UTC
SUMMARY
**This happens in Greek locale. I started apps with LANG=en and the link is proper.**

In any KDE application's About <application> page, in Authors tab, there is an active link for kde.bugs.org.
Clicking the link directs to a malformed URL address:
https://www.https.com//bugs.kde.org

STEPS TO REPRODUCE
1. Set your session LANG to el_GR.UTF-8 (or possibly other non-English locale)
2. Start any KDE application, i.e. Dolphin
3. Open menu Help => About Dolphin
4. Go to Authors tab
5. Click on the link to https//bugs.kde.org

OBSERVED RESULT
Default web browser (FF) opens page https://www.https.com//bugs.kde.org

EXPECTED RESULT
Default web browser opens page https://bugs.kde.org


SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.21.4
KDE Frameworks Version: 5.81.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION

I tested other links in similar window/tabs, but I haven't found any other to do the same.
If I right-click on the link and select "Copy link location" clipboard pastes https//bugs.kde.org (to my surprise!!)
Comment 1 Petros 2021-04-22 17:16:38 UTC
Ha, ha, ha!!!
Reading again what I just wrote, I recognized the ~possible~ actual problem.

> clipboard pastes https//bugs.kde.org

which misses ":" from the protocol!!!
Comment 2 Bug Janitor Service 2021-05-11 13:09:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kxmlgui/-/merge_requests/59
Comment 3 Ahmad Samir 2021-05-12 20:00:51 UTC
Git commit 9aef7a7f1751abe9f9ca22024f212bb91ac35f42 by Ahmad Samir.
Committed on 11/05/2021 at 14:14.
Pushed by aacid into branch 'master'.

Don't translate urls

<a href="">https://foo.com</a> shouldn't be translated, otherwise we end up
with interesting issues.

M  +8    -4    src/kabstractaboutdialog_p.cpp

https://invent.kde.org/frameworks/kxmlgui/commit/9aef7a7f1751abe9f9ca22024f212bb91ac35f42