Don't translate urls

<a href="">https://foo.com</a> shouldn't be translated, otherwise we end up
with interesting issues.

BUG: 436052